Fixed some bug and complete cites in preliminares builders and intro

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -96,6 +96,27 @@
 	Year = {2018},
 }
 
+@inproceedings{landman2017,
+  author    = {Davy Landman and Alexander Serebrenik and Jurgen J. Vinju},
+  title     = {Challenges for Static Analysis of Java Reflection: Literature Review and Empirical Study},
+  booktitle = {Proceedings of ICSE 2017},
+  pages     = {507--518},
+  year      = {2017},
+  publisher = {IEEE},
+  doi       = {10.1109/ICSE.2017.53}
+}
+
+@incollection{papadakis2019,
+  author    = {Mike Papadakis and Michalis Kintis and Jie Zhang and Yue Jia and Yves Le Traon and Mark Harman},
+  title     = {Mutation Testing Advances: An Analysis and Survey},
+  booktitle = {Advances in Computers},
+  volume    = {112},
+  pages     = {275--378},
+  publisher = {Elsevier},
+  year      = {2019},
+  doi       = {10.1016/bs.adcom.2018.03.015}
+}
+
 @inproceedings{Ponzio:2016,
 	Acmid = {2950336},
 	Address = {New York, NY, USA},
@@ -1275,5 +1296,24 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   booktitle={Proceedings of the 2020 Conference on Formal Methods in Computer-Aided Design (FMCAD)},
   publisher={IEEE},
 }
+
+@book{sommerville2016,
+  author    = {Ian Sommerville},
+  title     = {Software Engineering},
+  edition   = {10},
+  publisher = {Pearson},
+  year      = {2016},
+  isbn      = {978-0133943030}
+}
+
+@book{pressman2019,
+  author    = {Roger S. Pressman and Bruce R. Maxim},
+  title     = {Software Engineering: A Practitioner's Approach},
+  edition   = {9},
+  publisher = {McGraw-Hill Education},
+  year      = {2019},
+  isbn      = {978-1260548006}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
