--- a/related.tex
+++ b/related.tex
@@ -6,7 +6,7 @@ para un módulo dado aparece de forma recurrente en distintos análisis de
 programas, incluyendo, la verificación de software usando \emph{model checking} y la generación automática de tests.
 En trabajos como \cite{DBLP:conf/tacas/NoriRTT09,DBLP:conf/tacas/KhurshidPV03} en el contexto de verificación 
 de software usando \emph{model checking}, y
-\cite{Tillmann:2010,Tillmann:2008,paPacheco07,DBLP:conf/icse/BraioneDMP18}, en
+\cite{Tillmann:2010,Tillmann:2008,Pacheco07,DBLP:conf/icse/BraioneDMP18}, en
 el contexto de generación automática de casos de test, aparece el problema de 
 identificar una parte de una API y proveerla para el análisis. En general, esta tarea se realiza de forma manual en los enfoques previos.
 
