--- a/resumen.tex
+++ b/resumen.tex
@@ -1,3 +1,30 @@
 %!TEX root = main.tex
 \chapter*{Resumen}
 
+\begin{center}
+    \Large
+    \textbf{Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones}
+        
+    \vspace{0.4cm}
+    \large
+    por Mariano Politano
+        
+    \vspace{0.9cm}
+    \textbf{Resumen}
+\end{center}
+
+\vspace{0.5cm}
+
+\newpage
+
+\begin{center}
+    \Large
+    \textbf{Efficient API-Based Bounded-Exhaustive Input Generation Without Formal Specifications}
+        
+    \vspace{0.4cm}
+    \large
+    by Mariano Politano
+        
+    \vspace{0.6cm}
+    \textbf{Abstract}
+\end{center}
