--- a/titlepage-famaf.tex
+++ b/titlepage-famaf.tex
@@ -1,32 +1,39 @@
 %!TEX root = main.tex
 \begin{titlepage}
+\begin{center}
 
 \begin{center}
+%\href{https://creativecommons.org/licenses/by-nc-sa/4.0/deed.es}{\includegraphics[scale=0.8]{by-nc-sa.png}}
+{\includegraphics[scale=0.65]{images/logos.png}}
+\end{center}
+\medskip
+
 {\LARGE \textbf{Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones}}\\ 
-\vspace{4mm}
-{\Large por Mariano Politano}\\
+\vspace{1cm}
+{\Large por Mariano Politano}\\\vspace{1cm}
 
-\vspace{50mm}
+{\large Presentado ante la Facultad de Matem\'atica, Astronom{\'\i}a, F{\'\i}sica y Computaci\'on como parte de los requisitos para la obtenci\'on del grado de Doctor en Ciencias de la Computación de la} \\ \vspace{1cm}
 
-Presentado ante la Facultad de Matem\'atica, Astronom\'ia y F\'isica\\
-como parte de los requerimientos para la obtenci\'on del grado de\\
-Doctor en Ciencias de la Computaci\'on de la\\
-\textsc{Universidad Nacional de C\'ordoba}\\
- 
-\vspace{50mm}
-
-Agosto, 2023\\
-@FaMAF - UNC 2023\\
+{\large UNIVERSIDAD NACIONAL DE C\'ORDOBA}\\ \vspace{1.5cm}
+{\large  XXX, 2025}\\ \vspace{0.5cm} 
+%{\large  \copyright\;FaMAF \/- UNC 2024}\\ \vspace{0.5cm}
 
 {\Large Director: Pablo Daniel Ponzio}
-\\
-{\Large Co-Director: Germán Enrique Regis}
+\\  \vspace{0.5cm} 
+{\Large Co-Director: Germán Enrique Regis} \vspace{0.5cm} 
 
+Tribunal especial (titulares y suplentes):
 
-\vspace{10mm}
-\href{https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png}{\includegraphics{images/licencia-famaf.png}}\\
-{Mejoras en la eficiencia de Generaci\'on Exahustiva Acotada por Mariano Politano se distribuye bajo una \href{https://creativecommons.org/licenses/by-nc-sa/4.0/deed.es_ES}{Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional}.}
-\end{center}  
+\end{center}
+
+\begin{center}
+\href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{\includegraphics[scale=0.8]{images/by-nc-sa.png}}
+\end{center}
+
+\begin{center}
+Mejoras en la eficiencia de Generaci\'on Exahustiva Acotada © 2024 por \href{https://mpolitano.github.io}{Mariano Politano} se distribuye bajo licencia \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0} 
+\end{center}
+
 \end{titlepage} 
 
 %LICENCIA FAMAF
