--- a/introduccion.tex
+++ b/introduccion.tex
@@ -7,7 +7,7 @@
 % Software \cite{}. Por ejemplo, la generación automática de tests \cite{} y la verificación \cite{} son muy efectivos para encontrar defectos en el software.
 
 
-En la actualidad, el software está presente en casi todos los aspectos de la vida diaria, desde sistemas críticos en la industria aeronáutica y en salud, hasta aplicaciones móviles de uso cotidiano \cite{} \pp{Libros de ingenieria de software} La evolución de la tecnología y su integración en nuestra sociedad han hecho que la calidad del software sea un factor clave en el desarrollo tecnológico. La ingeniería de software es una disciplina fundamental en el desarrollo y construcción de sistemas de software complejos y de alta calidad \cite{} \pp{Libros de ingenieria de software}. 
+En la actualidad, el software está presente en casi todos los aspectos de la vida diaria, desde sistemas críticos en la industria aeronáutica y en salud, hasta aplicaciones móviles de uso cotidiano \cite{Pressman} \pp{Libros de ingenieria de software} La evolución de la tecnología y su integración en nuestra sociedad han hecho que la calidad del software sea un factor clave en el desarrollo tecnológico. La ingeniería de software es una disciplina fundamental en el desarrollo y construcción de sistemas de software complejos y de alta calidad \cite{sommerville2016,pressman2019}. 
 %A medida que la tecnología ha avanzado, el software se ha vuelto omnipresente en nuestra vida cotidiana. 
 A medida que el software se vuelve ubicuo gracias a los rápidos avances en tecnología, garantizar la corrección funcional del software es más crucial que nunca. Sin embargo, a menudo sucede que el software desarrollado es defectuoso, lo que causa distintos tipos de inconvenientes a los usuarios finales.
 Además, la creciente demanda de sistemas de software crítico ha llevado a la aparición de diversos desafíos y problemas en su desarrollo y mantenimiento.
@@ -27,13 +27,13 @@ y la detección y reporte automáticos de fallas \cite{Pacheco07, Ma15 , Godefro
 Aunque estas técnicas implican en muchos casos análisis completamente automatizados, su aplicación suele requerir cierto esfuerzo por parte de los ingenieros de software. Los \emph{model checkers} para software dependen de la definición de \emph{drivers}, programas que permiten construir entradas para el código bajo análisis. De manera similar, en los enfoques de tests unitarios parametrizados \cite{Tillmann:2010} es obligatorio un mecanismo para construir entradas. Algunas herramientas basadas en la ejecución simbólica requieren las llamadas "fábricas de objetos" para construir casos de prueba que incluyan entradas con tipos no primitivos \cite{Tillmann:2008}. Las técnicas automatizadas de generación de tests basadas en la API de un módulo pueden usarse para construir entradas de tipos no primitivos \cite{Pacheco07, Fraser11}, automatizando así los problemas de generación de entradas antes mencionados. Sin embargo, suelen presentar dificultades para generar un buen conjunto de entradas diversas para módulos que manipulan estructuras dinámicas complejas (almacenadas en el heap). Esto es aún más difícil para módulos con APIs ricas \cite{Ponzio:2018}. Muchos autores han abordado este problema definiendo diferentes enfoques para guiar la generación de tests y crear conjuntos más diversos de entradas \cite{Ponzio:2018, Ciupa:2008}.
 
 En este trabajo, se proponen dos enfoques diferentes para abordar el problema de generar mejores entradas para módulos con estados dinámicos complejos. Por un lado, observamos que la selección de rutinas de la API de módulo, para alimentar una herramienta de generación de entradas y construir estructuras para el análisis de programas (drivers para model checking de software, entradas para tests unitarios, o para tests parametrizados, etc.), tiene un impacto crucial en el análisis. Por esta razón, definimos el concepto de \emph{métodos generadores de objetos} como un subconjunto \(B\) de métodos, extraídos de la API de un módulo \(M\), que pueden emplearse para crear cualquier entrada para \(M\) en un análisis automatizado de programas  (por ejemplo, un driver para model checking de software). 
-Claramente, cuanto mayor sea el número de estructuras diferentes que se puedan crear con \(B\), mayores serán las posibilidades de encontrar errores en \(M\). Decimos que un conjunto de métodos generadores de objetos es suficiente si estos pueden usarse en combinación para construir todas las estructuras posibles de \(M\). Por lo tanto, los generadores de objetos suficientes son la mejor opción posible para encontrar errores. Cabe notar que \(B\) puede contener rutinas superfluas. Una rutina superflua \(s\) es aquella tal que los objetos del módulo pueden construirse usando las rutinas en $B - \{s\}$ (el ejemplo más simple son las rutinas que nunca cambian el estado de los objetos, también denominados métodos puros u observadores \cite{}). Llamamos \emph{minimal} a un conjunto de generadores de objetos \(B\) que no contiene rutinas superfluas. La minimalidad es importante porque proporcionar rutinas superfluas a una herramienta de análisis automático suele impactar negativamente en su eficiencia (la cantidad de formas posibles de combinar \(k\) rutinas usualmente aumenta exponencialmente con respecto a \(k\)). 
+Claramente, cuanto mayor sea el número de estructuras diferentes que se puedan crear con \(B\), mayores serán las posibilidades de encontrar errores en \(M\). Decimos que un conjunto de métodos generadores de objetos es suficiente si estos pueden usarse en combinación para construir todas las estructuras posibles de \(M\). Por lo tanto, los generadores de objetos suficientes son la mejor opción posible para encontrar errores. Cabe notar que \(B\) puede contener rutinas superfluas. Una rutina superflua \(s\) es aquella tal que los objetos del módulo pueden construirse usando las rutinas en $B - \{s\}$ (el ejemplo más simple son las rutinas que nunca cambian el estado de los objetos, también denominados métodos puros u observadores \cite{Boyapati02}). Llamamos \emph{minimal} a un conjunto de generadores de objetos \(B\) que no contiene rutinas superfluas. La minimalidad es importante porque proporcionar rutinas superfluas a una herramienta de análisis automático suele impactar negativamente en su eficiencia (la cantidad de formas posibles de combinar \(k\) rutinas usualmente aumenta exponencialmente con respecto a \(k\)). 
 
 Identificar un conjunto suficiente y minimal de métodos generadores de objetos de forma manual requiere de un análisis minucioso de las rutinas disponibles y una comprensión profunda de la semántica del módulo. Esto es especialmente difícil para módulos con APIs ricas, donde hay muchas rutinas y mucha redundancia en la API. Para facilitar la tarea del desarrollador, en este trabajo se proponen distintos enfoques automáticos para identificar conjuntos suficientes y minimales de métodos generadores de objetos, con distintas características. Exploramos aquí el uso de un algoritmo evolutivo y de un algoritmo codicioso (basado en hill climbing), con diferentes funciones objetivo que utilizan técnicas de generación automáticas de test. Además de buscar generadores de objetos suficientes y minimales, nuestros enfoques también tienen en cuenta otras características de los métodos, como la cantidad y la complejidad de sus parámetros, de modo que se favorecen las rutinas “más simples” en la búsqueda. El objetivo es elegir métodos generadores que puedan ser utilizados de manera más fácil y eficiente en los análisis de programas.
 
 Dado que el número de instancias de un módulo de software es potencialmente infinito,
 % y los análisis de programas que abordamos también están limitados en cuanto al número de estructuras que pueden emplear, 
-nuestros algoritmos se limitan a explorar conjunto acotado de estructuras para \(M\) \cite{Boyapati02} (por ejemplo, todas las instancias de una lista enlazada con hasta \(k\) nodos). El valor de la función objetivo para un conjunto de rutinas \(R\) se basa en el número de estructuras acotadas que se pueden generar utilizando combinaciones de estas rutinas, mediante técnicas automáticas de generación de tests. Experimentamos con dos formas distintas de computar la función objetivo, una se basa en una modificación de una herramienta de generación de casos de prueba aleatorios (Randoop \cite{ref24}) para generar la mayor cantidad posible de estructuras acotadas a partir de \(R\), permitiendo como máximo \(k\) objetos de cada tipo en las estructuras (por ejemplo, todas las instancias de listas enlazadas con hasta \(k\) nodos). \pp{Esto es así Cacho?} Otra se basa en una técnica eficiente de generación exhaustiva acotada basada en la API, denominada BEAPI, que definimos en este trabajo (ver más adelante).
+nuestros algoritmos se limitan a explorar conjunto acotado de estructuras para \(M\) \cite{Boyapati02} (por ejemplo, todas las instancias de una lista enlazada con hasta \(k\) nodos). El valor de la función objetivo para un conjunto de rutinas \(R\) se basa en el número de estructuras acotadas que se pueden generar utilizando combinaciones de estas rutinas, mediante técnicas automáticas de generación de tests. Experimentamos con dos formas distintas de computar la función objetivo, una se basa en una modificación de una herramienta de generación de casos de prueba aleatorios (Randoop \cite{Pacheco07}) para generar la mayor cantidad posible de estructuras acotadas a partir de \(R\), permitiendo como máximo \(k\) objetos de cada tipo en las estructuras (por ejemplo, todas las instancias de listas enlazadas con hasta \(k\) nodos). \pp{Esto es así Cacho?} Otra se basa en una técnica eficiente de generación exhaustiva acotada basada en la API, denominada BEAPI, que definimos en este trabajo (ver más adelante).
 Nuestra evaluación experimental muestra que usando cotas razonables, los algoritmos definidos son eficientes, y computan métodos generadores de objetos suficientes y minimales con precisión (siempre computan generadores de objetos suficientes, y en la mayoría de los casos los generadores de objetos identificados son minimales, o tienen muy pocos métodos superfluos).
 
 
@@ -82,7 +82,7 @@ lo suficientemente grandes. El desafío que enfrentan los enfoques de generació
 exhaustiva acotada es cómo explorar eficientemente un espacio de búsqueda
 enorme, que a menudo crece exponencialmente con respecto a los \textit{scopes}.
 El espacio de búsqueda típicamente incluye una gran cantidad de entradas
-inválidas (que no satisfacen la especificación), y entradas isomorfas \cite{15, 28} \pp{citas}. 
+inválidas (que no satisfacen la especificación), y entradas isomorfas \cite{Iosif02,Robby03}.
 Por lo tanto, podar partes del espacio de búsqueda que involucran datos de entrada 
 inválidos e isomorfos (redundantes) es clave para que estos enfoques sean eficientes y 
 escalables en la práctica \cite{Boyapati02}.
@@ -109,7 +109,7 @@ La ejecución de cada secuencia de test generada por BEAPI produce una entrada e
 Como es habitual en la generación exhaustiva acotada, BEAPI requiere que el
 usuario proporcione los scopes para la generación, que en BEAPI incluyen cotas
 en el tamaño de las estructuras a generar, y valores primitivos para invocar a
-los métodos de la API (ver Capítulo \ref{}). 
+los métodos de la API (ver Capítulo \ref{cap:beapi}). 
 
 Un enfoque de fuerza bruta intentaría generar todas las secuencias de test con
 hasta $m$ métodos, donde $m$ es la longitud máxima permitida para las secuencias de test, 
@@ -143,7 +143,7 @@ requiere un esfuerzo mínimo de especificación en la mayoría de los casos (inc
 hacer que los métodos de la API lancen excepciones en presencia de entradas
 inválidas. Este estilo de programación se denomina "programación defensiva", 
 fue popularizado por Liskov \cite{Liskov00}, y es ampliamente recomendado para el desarrollo de APIs robustas. 
-Otra ventaja de BEAPI respecto a los enfoques basados en especificaciones es que produce secuencias de test para crear las entradas correspondientes utilizando métodos de la API, lo que facilita la creación de tests, y mejora la legibilidad y mantenibilidad de los mismos \cite{Braione17}. Esto es en contraste con las técnicas existentes, en las que las estructuras son codificadas directamente en los tests (como grafos) usando mecanismos de bajo nivel del lenguaje de programación (como reflexión en Java \cite{} \pp{algo de reflection}).
+Otra ventaja de BEAPI respecto a los enfoques basados en especificaciones es que produce secuencias de test para crear las entradas correspondientes utilizando métodos de la API, lo que facilita la creación de tests, y mejora la legibilidad y mantenibilidad de los mismos \cite{Braione17}. Esto es en contraste con las técnicas existentes, en las que las estructuras son codificadas directamente en los tests (como grafos) usando mecanismos de bajo nivel del lenguaje de programación (como reflexión en Java \cite{landman2017}).
 
 
 \pp{TODO: Evaluación experimental de builders cuando tengamos la sección
